src/test/deca/context/invalid/tests/CLASS-extend_loop.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 15: extends loop
// 
// Historique:
//    cree le 01/01/2022


class Test extends Test2 {

}

class Test2 extends Test {

}